# pyRVtest

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  MEMO_F_reliability_diagnostic_2026-04-28.md  MEMO_coauthor_updates.md  MEMO_pyRVtest_CClean_fixes_2026-04-14.md  README.md  README.rst  README.txt  TUTORIAL.md  mypy.ini  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  tutorial.md
docs/: advanced_features.rst  agent_guide.rst  api.rst  conf.py  custom_demand.rst  faq.rst  in_package_demand.rst  index.rst  installation.rst  introduction.rst  legal.rst  math.rst  migrating_to_v0.4.rst  pyRVtest_performance_at_scale.md  references.rst  tutorial.rst
memory/: MEMORY.md  feedback_python_env.md
pyRV/: Sketch_DemandAdjustment  construction.py  exceptions.py  main.py  options.py
pyRVtest/: __init__.py  _agent_guide.py  _parallel.py  construction.py  demand_jacobian.py  exceptions.py  formulation.py  markups.py  options.py  output.py  primitives.py  problem.py  products.py  readthedocs.yml  results.py  version.py
tests/: README.md  __init__.py  _snapshot_helpers.py  conftest.py  example_notebook.ipynb  test_adapter_user_supplied_markups.py  test_agent_guide.py  test_analytical.py  test_backends.py  test_clustering_equivalence.py  test_compute_markups_direct.py  test_custom_demand_example.py  test_dearing_models.py  test_demand_adjustment.py  test_demand_adjustment_precompute.py  test_demand_params.py  test_demand_params_integration.py  test_demand_params_rho_alias.py  (+37 more)
(+180 files in other folders)
